--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "@reduxjs/toolkit": "^1.7.1",
+    "bootstrap": "5.0.0-alpha1",
+    "graphql": "^16.2.0",
+    "install": "^0.13.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.5.0",
