--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/client": "^3.5.6",
     "@reduxjs/toolkit": "^1.7.1",
     "bootstrap": "5.0.0-alpha1",
+    "firebase": "^9.9.1",
     "framer-motion": "^6.3.16",
     "graphql": "^16.2.0",
     "install": "^0.13.0",
