--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@emailjs/browser": "^3.6.2",
     "@reduxjs/toolkit": "^1.7.1",
     "bootstrap": "5.0.0-alpha1",
     "firebase": "^9.9.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
     "graphql": "^16.2.0",
     "install": "^0.13.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
